--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
                 <p class="no-found">Ningún mensaje fue encontrado</p>
                 <p class="ingresa-texto">Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
-            
+            <input class="btn-copiar" type="button" value="Copiar">
         </section>
-
+        
     </main>
+    <script src="./js/app.js"></script>
 </body>
 </html>
