Incorporando la función de encriptar y desencriptar

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </form>
             
             <div class="botones">
-                <input class="btn-encriptar" type="button" value="Encriptar">
-                <input class="btn-desencriptar" type="button" value="Desencriptar">
+                <input class="btn-encriptar" type="button" value="Encriptar" onclick="encriptar()">
+                <input class="btn-desencriptar" type="button" value="Desencriptar" onclick="desencriptar()">
             </div>
         </section>
             
